(fix): social icons overlapping album arrow (#290)

--- a/plugins/archive/app/archive.scss
+++ b/plugins/archive/app/archive.scss
@@ -49,7 +49,7 @@ minds-archive-theatre{
       left: 0;
     }
     &.right{
-      right: 0;
+      right: 40px;
     }
 
   }
